--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
       <groupId>com.aliyun.openservices</groupId>
       <artifactId>ons-client</artifactId>
       <version>1.7.5.Final</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
